--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sqlite3-mozporter": "^1.0.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.4.3",
     "chai": "^3.5.0",
