--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "babel src -d dist --watch",
     "build": "babel src -d dist",
     "docs": "docker -i src -o docs",
-    "test": "DEBUG=search mocha --compilers js:babel-register"
+    "test": "DEBUG=search mocha --compilers js:babel-register",
+    "dist": "npm run build && npm run docs"
   },
   "author": {
     "name": "Francis Chong",
