--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mochi-search",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A simple full text search engine with CJK support for nodejs.",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "start": "babel src -d dist --watch",
     "build": "babel src -d dist",
